# unifi-access-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  discover_endpoints.py  discover_endpoints_too.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic_usage.py  error_handling.py  visitor_management.py
tests/: __init__.py
unifi_access/: __init__.py  client.py  exceptions.py  models.py  websocket.py
